libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/index-1.jsonc
//@ run: fail
//@ description: index/1 should error out
["::kernel::special_form::index", "x"]
//~^ ERROR expected 2 arguments to `[]`, found 1
